# pdf_summary_openai

./: pyproject.toml  reference.txt  step_01.py  step_02.py  step_03.py  step_03_ver2.py
