[tool.poetry]
name = "pdf-summary-openai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "pdf_summary_openai"}]

[tool.poetry.dependencies]
python = "^3.8"
openai = "^0.27.2"
requests = "^2.28.2"
pypdf2 = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
